--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,7 +1,6 @@
 .footer {
     height: 100px;
-    color: white;
-    background-color: black;
+    background-color: rgb(225, 214, 214);
     display: flex;
     justify-content: center;
     align-items: center;
