--- a/src/Components/Country/Country.css
+++ b/src/Components/Country/Country.css
@@ -3,6 +3,7 @@
     padding: 20px 20px 5px;
     border-radius: 20px;
     background-color: rgba(228, 184, 218, 0.674);
+    color: white;
 }
 
 .country img {
